--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <style>
 #board, #board > .row { margin: 0; padding: 0; }
+#board { width: 360px; margin-left: auto; margin-right: auto; }
 #board { text-align: center; }
 #board > .row { height: 100px; }
 #board > .row div { width: 100px; font-size: 60px; vertical-align: middle; float: left; display: inline; }
 .cell { margin: 10px; background-color: #DDD; width: 80px; height: 80px; }
 
 #board.____x____ .five:after { content: 'x'; }
+#board.____x____ .turn:after { content: "o's turn"; }
 </style>
 
 <div id="board" class="____x____">
@@ -24,4 +26,5 @@
         <div class="cell eight"></div>
         <div class="cell nine"></div>
     </div>
+    <div class="turn"></div>
 </div>
