--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 .cell { margin: 10px; background-color: #DDD; width: 80px; height: 80px; }
 
 #board.____x____ .five:after { content: 'x'; }
-#board.____x____ .turn:after { content: "o's turn"; }
+#board.____x____ #turn:after { content: "o's turn"; }
 </style>
 
 <div id="board" class="____x____">
@@ -26,5 +26,26 @@
         <div class="cell eight"></div>
         <div class="cell nine"></div>
     </div>
-    <div class="turn"></div>
+    <div id="turn"></div>
 </div>
+
+<script>
+var whose_turn = function(className) {
+    return ['x', 'o'][className.split('_').filter(function(a) { return a != ''; }).length % 2]
+}
+var cells = {
+    'cell one': 0, 'cell two': 1, 'cell three': 2,
+    'cell four': 3, 'cell five': 4, 'cell six': 5,
+    'cell seven': 6, 'cell eight': 7, 'cell nine': 8
+}
+var n, i, className
+for (cell in cells){
+    document.getElementsByClassName(cell)[0].addEventListener('click', function(e) {
+        i = cells[e.target.className]
+        className = document.getElementById('board').className
+        className[i] = whose_turn(className)
+        console.log(whose_turn(className))
+        document.getElementById('board').setAttribute('class', className)
+    })
+}
+</script>
