switch class name on click

--- a/index.html
+++ b/index.html
@@ -39,13 +39,19 @@ var cells = {
     'cell seven': 6, 'cell eight': 7, 'cell nine': 8
 }
 var n, i, className
+
+// http://stackoverflow.com/questions/1431094/how-do-i-replace-a-character-at-a-particular-index-in-javascript
+String.prototype.replaceAt=function(index, character) {
+    return this.substr(0, index) + character + this.substr(index+character.length);
+}
+
 for (cell in cells){
     document.getElementsByClassName(cell)[0].addEventListener('click', function(e) {
         i = cells[e.target.className]
         className = document.getElementById('board').className
-        className[i] = whose_turn(className)
-        console.log(whose_turn(className))
-        document.getElementById('board').setAttribute('class', className)
+        if (className[i] == '_') {
+            document.getElementById('board').setAttribute('class', className.replaceAt(i, whose_turn(className)))
+        }
     })
 }
 </script>
