--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="author" content="Thomas Levine">
 
   <title>Tic Tac Toe in CSS</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
