--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 <body>
   <div id="board" class="_________">
       <div class="row">
+          <div class="cell zero"></div>
           <div class="cell one"></div>
           <div class="cell two"></div>
-          <div class="cell three"></div>
       </div>
       <div class="row">
+          <div class="cell three"></div>
           <div class="cell four"></div>
           <div class="cell five"></div>
-          <div class="cell six"></div>
       </div>
       <div class="row">
+          <div class="cell six"></div>
           <div class="cell seven"></div>
           <div class="cell eight"></div>
-          <div class="cell nine"></div>
       </div>
       <div id="turn"></div>
   </div>
