--- a/index.html
+++ b/index.html
@@ -18,25 +18,26 @@
     #board > .row { height: 100px; }
     #board > .row div { width: 100px; font-size: 60px; vertical-align: middle; float: left; display: inline; }
     .cell { margin: 10px; background-color: #DDD; width: 80px; height: 80px; }
+    .clicker { width: 100%; height: 100%; }
   </style>
   <link rel="stylesheet" href="tictactoe.css" />
 </head>
 <body>
   <div id="board" class="_________">
       <div class="row">
-          <div class="cell zero"></div>
-          <div class="cell one"></div>
-          <div class="cell two"></div>
+          <div class="cell zero"><div class="clicker zero"></div></div>
+          <div class="cell one"><div class="clicker one"></div></div>
+          <div class="cell two"><div class="clicker two"></div></div>
       </div>
       <div class="row">
-          <div class="cell three"></div>
-          <div class="cell four"></div>
-          <div class="cell five"></div>
+          <div class="cell three"><div class="clicker three"></div></div>
+          <div class="cell four"><div class="clicker four"></div></div>
+          <div class="cell five"><div class="clicker five"></div></div>
       </div>
       <div class="row">
-          <div class="cell six"></div>
-          <div class="cell seven"></div>
-          <div class="cell eight"></div>
+          <div class="cell six"><div class="clicker six"></div></div>
+          <div class="cell seven"><div class="clicker seven"></div></div>
+          <div class="cell eight"><div class="clicker eight"></div></div>
       </div>
       <div id="turn"></div>
   </div>
