--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     #board > .row { height: 100px; }
     #board > .row div { width: 100px; font-size: 60px; vertical-align: middle; float: left; display: inline; }
     .cell { margin: 10px; background-color: #DDD; width: 80px; height: 80px; }
-    .clicker { width: 100%; height: 100%; }
+    .clicker { width: 100%; height: 100%; margin: 0; padding: 0; background-color: #222; }
   </style>
   <link rel="stylesheet" href="tictactoe.css" />
 </head>
